Add controllers, all CRUD endpoints and update Swagger
